--- a/Admin_panel/src/views/partials/map.hbs
+++ b/Admin_panel/src/views/partials/map.hbs
@@ -24,8 +24,8 @@
         .setLngLat([eLocParse.lng, eLocParse.lat])
         .addTo(map);
     let loc = {
-        lat: eLocParse.lng,
-        lng: eLocParse.lat
+        lat: eLocParse.lat,
+        lng: eLocParse.lng
     }
     document.getElementById('latLng').value = JSON.stringify(loc);
 
