--- a/Admin_panel/src/views/partials/sidenavbar.hbs
+++ b/Admin_panel/src/views/partials/sidenavbar.hbs
@@ -13,10 +13,16 @@
                     <use xlink:href="/coreui/vendors/@coreui/icons/svg/free.svg#cil-speedometer"></use>
                 </svg> Home<span class="badge badge-info">NEW</span></a></li>
         <li class="c-sidebar-nav-title">INFO</li>
+        <li class="c-sidebar-nav-item">
+            <a class="c-sidebar-nav-link" href="/places">
+                <svg class="c-sidebar-nav-icon">
+                    <use xlink:href="/coreui/vendors/@coreui/icons/svg/free.svg#cil-home"></use>
+                </svg> Places</a></li>
         <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="/events">
                 <svg class="c-sidebar-nav-icon">
                     <use xlink:href="/coreui/vendors/@coreui/icons/svg/free.svg#cil-star"></use>
                 </svg> Events</a></li>
+        
         <li class="c-sidebar-nav-item">
 
 
