--- a/Admin_panel/src/views/pages/places/add-edit-places.hbs
+++ b/Admin_panel/src/views/pages/places/add-edit-places.hbs
@@ -10,9 +10,9 @@
                                     {{!-- the text should be match the perpose Add/Edit --}}
 
                                     <h4>{{#if id}}
-                                        Edit Event
+                                        Edit Place
                                         {{else}}
-                                        Add new Event
+                                        Add new Place
                                         {{/if}}</h4>
                                 </div>
                             </div>
@@ -24,7 +24,7 @@
                         <div class="panel mb-5 card-accent-info">
                             <div class="panel-body">
                                 <form method="POST" enctype="multipart/form-data"
-                                    action={{#if id}}"/events/update/{{id}}" {{else}}"/events/create" {{/if}}>
+                                    action={{#if id}}"/places/update/{{id}}" {{else}}"/places/create" {{/if}}>
 
                                     <div class="nav-tabs-boxed pseu-tabs">
                                         <div class="tab-content">
@@ -34,57 +34,39 @@
                                                         <div class="row">
                                                             <div class="col-md-5">
                                                                 <div class="form-group">
-                                                                    <label>Event Name</label><span
+                                                                    <label>Place Name</label><span
                                                                         class="required text-danger ml-1">*</span>
-                                                                    <input name="name" value={{#if id}} {{getObject  event "name"}}
+                                                                    <input name="name" value={{#if id}} {{name}}
                                                                         {{else}} "" {{/if}} type="text"
                                                                         class="form-control" required>
                                                                 </div>
                                                             </div>
                                                             <div class="col-md-5">
                                                                 <div class="form-group">
-                                                                    <label class="col-form-label" for="logo">Event
-                                                                        Picture</label><span
+                                                                    <label class="col-form-label" for="logo">Place
+                                                                        Pictures</label><span
                                                                         class="required text-danger ml-1">*</span>
-                                                                    <input id="event" type="file" name="event"
+                                                                    <input id="event" type="file" name="place"
                                                                         accept="image/png,image/jpg,image/jpeg"
-                                                                        {{#if id}} {{else}}required{{/if}}>
+                                                                        {{#if id}} {{else}}required{{/if}} multiple>
                                                                 </div>
                                                             </div>
+                                                            
                                                             <div class="col-md-5">
                                                                 <div class="form-group">
-                                                                    <label>Date</label>
-                                                                    <input name="time" type="time" class="form-control"
-                                                                        value=" {{#if id}}{{getObject  event "eventTime"}}{{else}} "" {{/if}}">
-                                                                    <input name="date" type="date" class="form-control"
-                                                                        value=" {{#if id}}{{getObject  event "eventDate"}}{{else}} "" {{/if}}">
-                                                                </div>
-                                                            </div>
-                                                            <div class="col-md-5">
-                                                                <div class="form-group">
-                                                                    <label>Event Description</label><span
+                                                                    <label>About the Place</label><span
                                                                         class="required text-danger ml-1">*</span>
                                                                     <textarea class="form-control" name="description"
-                                                                        required>{{#if id}} {{getObject event "description"}}  {{/if}}</textarea>
-                                                                </div>
-                                                            </div>
-                                                            <div class="col-md-5">
-                                                                <div class="form-group">
-                                                                    <label>Event Place</label>
-                                                                    <div class="uk-form-controls">
-                                                                        <select  class="form-control form-control-lg" name="select">
-                                                                            {{#each allPlaces}}
-                                                                            <option  value="{{getObject  this "_id"}}">{{getObject  this "name"}}</option>
-                                                                            {{/each}}
-                                                                        </select>
-                                                                    </div>
+                                                                        required>{{#if id}} {{about}}  {{/if}}</textarea>
                                                                 </div>
                                                             </div>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
-
+                                            <input type="hidden" id="latLng" name="latLng" value='{{#if id}}{"lat":{{lat}},"lng":{{lng}} }{{else}} none {{/if}}'>
+                                            <label for="">Location</label>
+                                            {{>map}}
                                         </div>
                                         <div class="row">
                                             <div class="col-md-10">
